+ Added data2inc

--- a/install/man/man1/bin2obj.1
+++ b/install/man/man1/bin2obj.1
@@ -18,7 +18,7 @@ in the file. (index is the index in the array).
 .SH USAGE
 
 .B bin2obj
-accepts a filenames of a binary file, and needs the name of a constant
+accepts a filename of a binary file, and needs the name of a constant
 (use the 
 .B \-c
 option). The output goes to standard output by default. If no unitname is
