+ Added ex92 and ex93

--- a/docs/sysutex/README
+++ b/docs/sysutex/README
@@ -88,7 +88,8 @@ ex85.pp contains an example of the TrimLeft function.
 ex86.pp contains an example of the TrimRight function.
 ex87.pp contains an example of the UpperCase function.
 ex88.pp contains an example of the LastDelimiter function.
-
 ex89.pp contains an example of the FormatFloat function.
 ex90.pp contains an example of the StrToFloat function.
 ex91.pp contains an example of the TextToFloat function.
+ex92.pp contains an example of the GetEnvironmentVariableCount function.
+ex93.pp contains an example of the GetEnvironmentVariable function.
